# words

./: .gitignore  AUTHORS  ChangeLog  Makefile.PRECONF  Makefile.am  NEWS  README  THANKS  acinclude.m4  ada.m4  configure.ac  confvars.ads.frame.in  wordsdoc.htm
src/: Makefile.am  whitakerswords.adb  words.adb
